# webp-optimize

./: Cargo.toml
.github/workflows/: build.yaml
src/: main.rs
